$Id$

version ? (????-??-??):

  - disposable liabilities (alec)
  - introduction to UI modularity (lukasz)
  - use HTTP_X_FORWARDED_FOR, HTTP_CLIENT_IP, REMOTE_ADDR to retrive 
    user IP address (Jerzy Kolosowski)
  - added Finance -> Printing -> Transfer forms (alec)

version 1.7.5 (2005-11-05):

  - BTS#0000466: lms-antyvir: fixed parse error (alec)
  - BTS#0000373: lms-notify: added exception handler for mail server 
    connection problems (alec)
  - changed stats units to kbps (alec)
  - added traffic stats in node informations window (alec)
  - fixed/changed access rights for printing modules (alec)

version 1.7.4 Wraith (2005-10-31):

  - BTS#0000451: lms-rtparser uses also CC: header to get queue ID (alec)
  - BTS#0000455: documentation fixed options names 
    usergroups -> customergroups (alec)
  - lmsd/dhcp: fixed problem with hosts with public IP (alec)
  - lmsd/parser: updated tscript library - added "break" and "continue"
    instructions in "for" and "while" loops (alec)
  - added "type" in cash table to handle some operation types 
    (cash, non-cash) - it fixes network balance calculations for
    backward compatybility and lost in 2005092900 database upgrade 
    additional functionality (alec)
  - contrib/sqlpanel: design fixes (alec)
  - forms can be submitted by Enter (lukas)
  - BTS#0000460: fixed "call to a member function ..." in mailing.php (alec)
  - fixed item's name escaping and 'cash' value on credit notes (alec)
  - propably fixed neverending story about bugs with MySQL and polish
    characters and UTF-8. Added info in documentation how to create
    database with polish collation and utf8 character set (alec)
  - added last 10 not accounted invoices list in cash receipt addition
    form (alec)
  - lmsd: added option --reload-all (alec)
  - BTS#0000391: lmsd: fixed problem with long executed (sleeping) 
    instances (alec)
  - added tip with IP address on nodes list in network info page (alec)
    