@@ -52,13 +52,13 @@ function main_fill($x,$y,$scale)	{
 	$pdf->line(978*$scale+$x,726*$scale+$y,978*$scale+$x,696*$scale+$y);
         $pdf->line(978*$scale+$x,726*$scale+$y,948*$scale+$x,726*$scale+$y);
     }
-    $pdf->addtext(15*$scale+$x,680*$scale+$y,30*$scale,$_NAME);
-    $pdf->addtext(15*$scale+$x,617*$scale+$y,30*$scale, $_ADDRESS." ".$_ZIP." ".$_CITY);
+    $pdf->addtext(15*$scale+$x,680*$scale+$y,30*$scale, iconv('UTF-8', 'ISO-8859-2', $_NAME));
+    $pdf->addtext(15*$scale+$x,617*$scale+$y,30*$scale, iconv('UTF-8', 'ISO-8859-2', $_ADDRESS." ".$_ZIP." ".$_CITY));
     $pdf->addtext(15*$scale+$x,555*$scale+$y,30*$scale, bankaccount($invoice['customerid']));
     $pdf->addtext(550*$scale+$x,497*$scale+$y,30*$scale,number_format($invoice['total'],2,',',''));
-    $pdf->addtext(15*$scale+$x,375*$scale+$y,30*$scale,$invoice['name']);
-    $pdf->addtext(15*$scale+$x,315*$scale+$y,30*$scale,$invoice['address']."; ".$invoice['zip']." ".$invoice['city']);
-    $pdf->addtext(15*$scale+$x,250*$scale+$y,30*$scale,trans("Payment for invoice: ").$invoice['t_number']);
+    $pdf->addtext(15*$scale+$x,375*$scale+$y,30*$scale, iconv('UTF-8', 'ISO-8859-2',$invoice['name']));
+    $pdf->addtext(15*$scale+$x,315*$scale+$y,30*$scale, iconv('UTF-8', 'ISO-8859-2',$invoice['address']."; ".$invoice['zip']." ".$invoice['city']));
+    $pdf->addtext(15*$scale+$x,250*$scale+$y,30*$scale, iconv('UTF-8', 'ISO-8859-2',trans("Payment for invoice: ").$invoice['t_number']));
 }
 
 function simple_fill_mip($x,$y,$scale)	{
@@ -74,23 +74,23 @@ function simple_fill_mip($x,$y,$scale)	{
         $pdf->line(370*$scale+$x,726*$scale+$y,370*$scale+$x,696*$scale+$y);
 	$pdf->line(370*$scale+$x,726*$scale+$y,340*$scale+$x,726*$scale+$y);
     }
-    $pdf->addtext(15*$scale+$x,560*$scale+$y,30*$scale,$_SHORT_NAME);
-    $pdf->addtext(15*$scale+$x,525*$scale+$y,30*$scale, $_ADDRESS);
-    $pdf->addtext(15*$scale+$x,490*$scale+$y,30*$scale, $_ZIP." ".$_CITY);
+    $pdf->addtext(15*$scale+$x,560*$scale+$y,30*$scale, iconv('UTF-8', 'ISO-8859-2',$_SHORT_NAME));
+    $pdf->addtext(15*$scale+$x,525*$scale+$y,30*$scale, iconv('UTF-8', 'ISO-8859-2',$_ADDRESS));
+    $pdf->addtext(15*$scale+$x,490*$scale+$y,30*$scale,  iconv('UTF-8', 'ISO-8859-2',$_ZIP." ".$_CITY));
     $pdf->addtext(15*$scale+$x,680*$scale+$y,30*$scale, substr(bankaccount($invoice['customerid']),0,17));
     $pdf->addtext(15*$scale+$x,620*$scale+$y,30*$scale, substr(bankaccount($invoice['customerid']),18,200));
     $pdf->addtext(15*$scale+$x,435*$scale+$y,30*$scale,"**".number_format($invoice['total'],2,',','')."**");
     //$pdf->addtext(15*$scale+$x,310*$scale+$y,30*$scale,$invoice['name']);
 
     $font_size=30;
-    while ($pdf->getTextWidth($font_size*$scale,$invoice['name'])>135)
+    while ($pdf->getTextWidth($font_size*$scale, iconv('UTF-8', 'ISO-8859-2',$invoice['name']))>135)
 	$font_size=$font_size-1;    
-    $pdf->addtext(15*$scale+$x,310*$scale+$y,$font_size*$scale,$invoice['name']);
+    $pdf->addtext(15*$scale+$x,310*$scale+$y,$font_size*$scale, iconv('UTF-8', 'ISO-8859-2',$invoice['name']));
     $font_size=30;
-    while ($pdf->getTextWidth($font_size*$scale,$invoice['address'])>135)
+    while ($pdf->getTextWidth($font_size*$scale, iconv('UTF-8', 'ISO-8859-2',$invoice['address']))>135)
 	$font_size=$font_size-1;    
-    $pdf->addtext(15*$scale+$x,275*$scale+$y,$font_size*$scale,$invoice['address']);
-    $pdf->addtext(15*$scale+$x,240*$scale+$y,30*$scale,$invoice['zip']." ".$invoice['city']);
+    $pdf->addtext(15*$scale+$x,275*$scale+$y,$font_size*$scale, iconv('UTF-8', 'ISO-8859-2',$invoice['address']));
+    $pdf->addtext(15*$scale+$x,240*$scale+$y,30*$scale, iconv('UTF-8', 'ISO-8859-2',$invoice['zip']." ".$invoice['city']));
 
     $font_size=30;
     while ($pdf->getTextWidth($font_size*$scale,trans("Invoice no.: ").$invoice['t_number'])>135)
@@ -103,11 +103,11 @@ function address_box($x,$y,$scale)	{
     global $pdf,$_NAME,$_ADDRESS,$_ZIP,$_CITY,$_SERVICE,$_SHORT_NAME,$invoice;
 
     $font_size=30;
-    while ($pdf->getTextWidth($font_size*$scale,$invoice['name'])>240)
+    while ($pdf->getTextWidth($font_size*$scale, iconv('UTF-8', 'ISO-8859-2',$invoice['name']))>240)
 	$font_size=$font_size-1;    
-    $pdf->addtext(5*$scale+$x,310*$scale+$y,$font_size*$scale,$invoice['name']);
-    $pdf->addtext(5*$scale+$x,275*$scale+$y,30*$scale,$invoice['address']);
-    $pdf->addtext(5*$scale+$x,240*$scale+$y,30*$scale,$invoice['zip']." ".$invoice['city']);
+    $pdf->addtext(5*$scale+$x,310*$scale+$y,$font_size*$scale, iconv('UTF-8', 'ISO-8859-2',$invoice['name']));
+    $pdf->addtext(5*$scale+$x,275*$scale+$y,30*$scale, iconv('UTF-8', 'ISO-8859-2',$invoice['address']));
+    $pdf->addtext(5*$scale+$x,240*$scale+$y,30*$scale, iconv('UTF-8', 'ISO-8859-2',$invoice['zip']." ".$invoice['city']));
 }
 
 // Dobra, czytamy z lms.ini
